fix: list and align

--- a/src/pages/User/History/components/TextEditor/index.scss
+++ b/src/pages/User/History/components/TextEditor/index.scss
@@ -35,13 +35,28 @@
   }
 
   code {
-    background-color: rgb(222, 222, 222);
+    background-color: rgb(238, 238, 238);
     padding: 0.2em 0.4em;
     border-radius: 0.2em;
 
     >* {
-      color: rgb(244, 159, 159);
+      color: rgb(244, 123, 123);
     }
   }
 
+  blockquote {
+    position: relative;
+    padding-left: 1em;
+    padding: 0.8em;
+    border-left: 0.2em solid lighten(black, 40%);
+    background-color: rgb(243, 243, 243);
+
+    line-height: 1em;
+    font-weight: 100;
+  }
+
+  ul,
+  ol {
+    list-style-position: inside;
+  }
 }
